rust-runtime-kafka/kafka/kr-kafka-ffi/include/kr_kafka.h

/* Snapshot generation changes on every successful refresh, including changes
 * to replicas, ISR and broker endpoints. RETIRED means its name may be reopened;
 * accepted old records retain their original UUID and delivery obligations. */
typedef struct {
 uint32_t struct_size,status;uint64_t generation;uint8_t topic_id[16];
 uint32_t partition_count,reason;
} kr_topic_status;
typedef struct {
 uint32_t struct_size,status;uint64_t generation;uint8_t topic_id[16];
 uint32_t partition_count,reason;uint64_t snapshot;uint32_t broker_count;
} kr_metadata_snapshot;
typedef struct {
 uint32_t struct_size;int32_t id;uint32_t port,host_len,rack_len,rack_present;
} kr_metadata_broker;
typedef struct {
 uint32_t struct_size;int32_t partition,leader,leader_epoch,error_code;
 uint32_t replica_count,isr_count,offline_count;
} kr_metadata_partition;
typedef struct kr_producer kr_producer;
/* Owner terminal status is published only after terminal record/fence events.
 * ABORTED emits no CLOSED event. Provider retirement may still require destroy.
 * These functions, snapshot reads/release and event draining remain usable after
 * owner failure. All outputs are caller-owned; initialize every struct_size.
 * Snapshot handles never repeat. At most max_open_topics snapshots may be held.
 * Acquiring missing/resolving metadata returns NOT_READY without a handle.
 * A snapshot remains immutable across refresh, topic close and name reuse.
 * Release once; stale/released handles return INVALID. Destroy releases all.
 * Row pages cap at 1024; string/node pages cap at 65536 bytes / 1024 IDs.
 * start equal to count returns an empty page; start beyond count is INVALID.
 * String bytes are UTF-8 without a terminator. Rack may be absent.
 * Refresh coalesces until the owner consumes it; STALE invalidates the cached
 * metadata until a successful refresh. Held snapshots remain readable. */
int32_t kr_owner_status(kr_producer*,uint32_t *status);
int32_t kr_topic_get_status(kr_producer*,uint32_t topic,kr_topic_status*);
int32_t kr_topic_refresh(kr_producer*,uint32_t topic);
int32_t kr_metadata_acquire(kr_producer*,uint32_t topic,kr_metadata_snapshot*);
int32_t kr_metadata_release(kr_producer*,uint64_t snapshot);
int32_t kr_metadata_brokers(kr_producer*,uint64_t snapshot,uint32_t start,kr_metadata_broker*,uint32_t capacity,uint32_t *written);
int32_t kr_metadata_partitions(kr_producer*,uint64_t snapshot,uint32_t start,kr_metadata_partition*,uint32_t capacity,uint32_t *written);