rust-runtime-kafka/kafka/kr-kafka-java/src/main/java/io/krkafka/ffi/kr_kafka_h.java


        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_owner_status(kr_producer *, uint32_t *status)
     * }
     */
    public static FunctionDescriptor kr_owner_status$descriptor() {
        return kr_owner_status.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_owner_status(kr_producer *, uint32_t *status)
     * }
     */
    public static MethodHandle kr_owner_status$handle() {
        return kr_owner_status.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_owner_status(kr_producer *, uint32_t *status)
     * }
     */
    public static MemorySegment kr_owner_status$address() {
        return kr_owner_status.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_owner_status(kr_producer *, uint32_t *status)
     * }
     */
    public static int kr_owner_status(MemorySegment x0, MemorySegment status) {
        var mh$ = kr_owner_status.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_owner_status", x0, status);
            }
            return (int)mh$.invokeExact(x0, status);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_topic_get_status {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_topic_get_status");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_topic_get_status(kr_producer *, uint32_t topic, kr_topic_status *)
     * }
     */
    public static FunctionDescriptor kr_topic_get_status$descriptor() {
        return kr_topic_get_status.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_topic_get_status(kr_producer *, uint32_t topic, kr_topic_status *)
     * }
     */
    public static MethodHandle kr_topic_get_status$handle() {
        return kr_topic_get_status.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_topic_get_status(kr_producer *, uint32_t topic, kr_topic_status *)
     * }
     */
    public static MemorySegment kr_topic_get_status$address() {
        return kr_topic_get_status.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_topic_get_status(kr_producer *, uint32_t topic, kr_topic_status *)
     * }
     */
    public static int kr_topic_get_status(MemorySegment x0, int topic, MemorySegment x2) {
        var mh$ = kr_topic_get_status.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_topic_get_status", x0, topic, x2);
            }
            return (int)mh$.invokeExact(x0, topic, x2);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_topic_refresh {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_topic_refresh");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_topic_refresh(kr_producer *, uint32_t topic)
     * }
     */
    public static FunctionDescriptor kr_topic_refresh$descriptor() {
        return kr_topic_refresh.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_topic_refresh(kr_producer *, uint32_t topic)
     * }
     */
    public static MethodHandle kr_topic_refresh$handle() {
        return kr_topic_refresh.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_topic_refresh(kr_producer *, uint32_t topic)
     * }
     */
    public static MemorySegment kr_topic_refresh$address() {
        return kr_topic_refresh.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_topic_refresh(kr_producer *, uint32_t topic)
     * }
     */
    public static int kr_topic_refresh(MemorySegment x0, int topic) {
        var mh$ = kr_topic_refresh.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_topic_refresh", x0, topic);
            }
            return (int)mh$.invokeExact(x0, topic);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_metadata_acquire {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_metadata_acquire");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_metadata_acquire(kr_producer *, uint32_t topic, kr_metadata_snapshot *)
     * }
     */
    public static FunctionDescriptor kr_metadata_acquire$descriptor() {
        return kr_metadata_acquire.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_metadata_acquire(kr_producer *, uint32_t topic, kr_metadata_snapshot *)
     * }
     */
    public static MethodHandle kr_metadata_acquire$handle() {
        return kr_metadata_acquire.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_metadata_acquire(kr_producer *, uint32_t topic, kr_metadata_snapshot *)
     * }
     */
    public static MemorySegment kr_metadata_acquire$address() {
        return kr_metadata_acquire.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_metadata_acquire(kr_producer *, uint32_t topic, kr_metadata_snapshot *)
     * }
     */
    public static int kr_metadata_acquire(MemorySegment x0, int topic, MemorySegment x2) {
        var mh$ = kr_metadata_acquire.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_metadata_acquire", x0, topic, x2);
            }
            return (int)mh$.invokeExact(x0, topic, x2);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_metadata_release {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_metadata_release");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_metadata_release(kr_producer *, uint64_t snapshot)
     * }
     */
    public static FunctionDescriptor kr_metadata_release$descriptor() {
        return kr_metadata_release.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_metadata_release(kr_producer *, uint64_t snapshot)
     * }
     */
    public static MethodHandle kr_metadata_release$handle() {
        return kr_metadata_release.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_metadata_release(kr_producer *, uint64_t snapshot)
     * }
     */
    public static MemorySegment kr_metadata_release$address() {
        return kr_metadata_release.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_metadata_release(kr_producer *, uint64_t snapshot)
     * }
     */
    public static int kr_metadata_release(MemorySegment x0, long snapshot) {
        var mh$ = kr_metadata_release.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_metadata_release", x0, snapshot);
            }
            return (int)mh$.invokeExact(x0, snapshot);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_metadata_brokers {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_LONG_LONG,
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_metadata_brokers");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_metadata_brokers(kr_producer *, uint64_t snapshot, uint32_t start, kr_metadata_broker *, uint32_t capacity, uint32_t *written)
     * }
     */
    public static FunctionDescriptor kr_metadata_brokers$descriptor() {
        return kr_metadata_brokers.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_metadata_brokers(kr_producer *, uint64_t snapshot, uint32_t start, kr_metadata_broker *, uint32_t capacity, uint32_t *written)
     * }
     */
    public static MethodHandle kr_metadata_brokers$handle() {
        return kr_metadata_brokers.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_metadata_brokers(kr_producer *, uint64_t snapshot, uint32_t start, kr_metadata_broker *, uint32_t capacity, uint32_t *written)
     * }
     */
    public static MemorySegment kr_metadata_brokers$address() {
        return kr_metadata_brokers.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_metadata_brokers(kr_producer *, uint64_t snapshot, uint32_t start, kr_metadata_broker *, uint32_t capacity, uint32_t *written)
     * }
     */
    public static int kr_metadata_brokers(MemorySegment x0, long snapshot, int start, MemorySegment x3, int capacity, MemorySegment written) {
        var mh$ = kr_metadata_brokers.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_metadata_brokers", x0, snapshot, start, x3, capacity, written);
            }
            return (int)mh$.invokeExact(x0, snapshot, start, x3, capacity, written);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_metadata_partitions {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_LONG_LONG,
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_metadata_partitions");
